# autoclicker

./: Cargo.toml  build.rs
src/: main.rs
